# https://godatadriven.com/blog/minimal-pyproject-toml-example/
# https://peps.python.org/pep-0621/

[project]
name = "vexpresso"
readme = "README.md"
version = "0.0.0"
authors = [
    { name = "Shyam Sudhakaran", email = "shyamsnair@protonmail.com" }
]
dependencies = [
    'numpy',
    'getdaft==0.1.5',
    'pandas',
    'pyarrow',
]

# https://stackoverflow.com/a/73066937
# [project.scripts]
# modern-python-cli = "modern_python_package.cli:main"

# https://github.com/PyCQA/flake8/issues/234
[tool.flake8]
max-line-length = 100

[tool.pylint]
good-names=["rv"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "--cov=vexpresso --junitxml=coverage.xml --cov-fail-under=80"

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
exclude = [
    "test/**"
]

