# https://godatadriven.com/blog/minimal-pyproject-toml-example/
# https://peps.python.org/pep-0621/

[project]
name = "vexpresso"
requires-python = ">=3.8"
readme = "README.md"
version = "0.0.2"
authors = [
    { name = "Shyam Sudhakaran", email = "shyamsnair@protonmail.com" }
]
dependencies = [
    'numpy',
    'getdaft==0.1.5',
    'pandas',
    'pyarrow',
]
